--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
   color: var(--text);
   font-family: 'Inter', sans-serif;
   line-height: 1.5;
-  cursor: url("assets/images/leaf-cursor.png"), auto;
+  cursor: url("assets/pics/cursor.png"), auto;
 }
 
 h1, h2 {
@@ -61,7 +61,7 @@ a {
 
 /* ---------- Profile ---------- */
 .profile img {
-  width: 100%;
+  width: 10rem;
   border-radius: 12px;
 }
 
@@ -102,16 +102,29 @@ a {
 /* ---------- Pinned Note ---------- */
 .note {
   background: var(--accent);
-  transform: rotate(-1deg);
+  /* transform: rotate(-1deg); */
   padding: 1rem;
   border-radius: 8px;
   margin-bottom: 1rem;
+}
+
+/* ---------- Collapsible Sections ---------- */
+.collapse-toggle {
+  background: var(--accent);
+  color: var(--text);
+  border: none;
+  padding: 0.5rem 1rem;
+  border-radius: 8px;
+  cursor: pointer;
+  font-weight: 600;
+  margin-bottom: 0.5rem;
 }
 
 /* ---------- Floating Buttons ---------- */
 #audio-toggle,
 #theme-toggle {
   position: fixed;
+  color: var(--text);
   bottom: 1rem;
   background: var(--accent);
   border: none;
@@ -141,3 +154,52 @@ a {
   opacity: 0;
   transform: scale(0.5);
 }
+
+/* ---------- Discord Widget ---------- */
+.discord-toggle {
+  width: 100%;
+  color: var(--text);
+  background: var(--accent);
+  border: none;
+  padding: 0.6rem;
+  border-radius: 10px;
+  cursor: pointer;
+  font-weight: 600;
+  margin-bottom: 0.5rem;
+   display: none;
+}
+
+.discord-widget {
+  width: 100%;
+  max-width: 350px;
+  margin: 0 auto;
+  border-radius: 14px;
+  overflow: hidden;
+  box-shadow: inset 0 0 0 1px rgba(255,255,255,0.05);
+}
+
+/* iframe sizing */
+.discord-widget iframe {
+  width: 100%;
+  height: 500px;
+  border: 0;
+}
+
+/* ---------- Mobile Behavior ---------- */
+@media (max-width: 768px) {
+  .discord-widget {
+    display: none;
+  }
+
+  .discord-widget.open {
+    display: block;
+  }
+
+  .discord-widget iframe {
+    height: 420px;
+  }
+  .discord-toggle {
+    display: block;
+  }
+}
+
